<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_friend"
        android:id="@+id/friend_edit_title_textView" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/friend_edit_title_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/photo_icon"
        android:id="@+id/friend_photo_imageView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_photo_imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_picture"
        android:id="@+id/friend_choose_picture_button"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/friend_choose_picture_button"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/friend_edit_name_textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:layout_marginRight="20dp"
        android:id="@+id/friend_edit_name_editText"
        android:layout_below="@id/friend_choose_picture_button"
        android:layout_toEndOf="@+id/friend_edit_name_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/friend_edit_name_textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:id="@+id/friend_edit_phone_textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_edit_name_textView"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/friend_edit_phone_textView"
        android:id="@+id/friend_edit_phone_editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/friend_edit_phone_editText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:id="@+id/friend_edit_category_textView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_edit_phone_editText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/friend_edit_category_textView"
        android:id="@+id/friend_edit_category_spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_edit_category_textView"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/remove"
        android:id="@+id/friend_edit_removeButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_edit_category_textView"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:id="@+id/friend_edit_saveButton"
        android:layout_gravity="center_horizontal" />


</RelativeLayout>