<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_category"
        android:id="@+id/categories_add_title_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/categories_add_title_textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/categories_add_name_textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:id="@+id/categories_add_name_editText"
        android:layout_below="@id/categories_add_title_textView"
        android:layout_toEndOf="@id/categories_add_name_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/categories_add_name_textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/color"
        android:id="@+id/categories_add_color_textView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@id/categories_add_name_editText"
        android:layout_alignStart="@id/categories_add_name_editText"
        android:layout_toEndOf="@id/categories_add_color_textView"
        android:id="@+id/categories_add_color_spinner" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/categories_add_color_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/photo_icon"
        android:id="@+id/category_icon_imageView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_icon_imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_picture"
        android:id="@+id/category_choose_picture_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_choose_picture_button"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add"
        android:id="@+id/category_add_button"
        android:layout_gravity="center_horizontal" />

</RelativeLayout>